# OpenCV-Testing

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  gpuTesting.cpp  gpuTesting.cpp~  testing  testing.cpp  testing.cpp~  x
circle detection with server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  old_testing.cpp  testing
facedetection/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  webcamtest.cpp  webcamtest.cpp~
frisbeelocating/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detect_circles.cpp  detect_circles.hpp  frisbeelocating  frisbeelocating.cpp  frisbeelocating.cpp~  gpuTesting.cpp  threadsafe_buffer.cpp  threadsafe_buffer.hpp  threadsafe_queue.hpp  vision_thread.cpp  vision_thread.hpp
original 900_opencv/: a.out  server.c  server.cpp  testing1.cpp~  threaded_buffer.cpp  threaded_buffer_fixed.cpp
original 900_opencv/DisplayImage/: CMakeCache.txt  DisplayImage  DisplayImage.cpp  Makefile  cmake_install.cmake
original 900_opencv/client_server/: CMakeCache.txt  CMakeLists.txt  server
original 900_opencv/colorTracking/: colorTracking  colorTracking.cpp
original 900_opencv/frisbeelocating/: frisbeelocating  frisbeelocating.cpp
original 900_opencv/oldtesting/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  gpuTesting.cpp  gpuTesting.cpp~  testing  testing.cpp~
original 900_opencv/python/: drawing.py
original 900_opencv/utailColoredObjectDetection/: CoeStructures.h  ColoredObjectExtractor.cpp  ColoredObjectExtractor.h  ColoredObjects.h  (+7 more)
testing/: Makefile  gpuTesting1.cpp
(+14 files in other folders)
