cmake_minimum_required(VERSION 2.8)
set(CMAKE_LEGACY_CYGWIN_WIN32 0)
project( testing )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Ofast -mfpu=neon-vfpv4 -mcpu=cortex-a15 -mvectorize-with-neon-quad -fvect-cost-model")
add_executable( testing gpuTesting.cpp frisbeelocating.cpp)
target_link_libraries( testing ${OpenCV_LIBS} )
